// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Specific Icon Components > should render 'AddIcon' correctly 1`] = `
<svg
  class="svg-icon add-icon"
  data-testid="icon-base"
  fill="none"
  stroke="currentColor"
  stroke-width="1"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M12 4.5v15m7.5-7.5h-15"
    stroke-linecap="round"
    stroke-linejoin="round"
  />
   
</svg>
`;

exports[`Specific Icon Components > should render 'BellIcon' correctly 1`] = `
<svg
  class="svg-icon notification-icon"
  data-testid="icon-base"
  fill="none"
  stroke="currentColor"
  stroke-width="1"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0"
    stroke-linecap="round"
    stroke-linejoin="round"
  />
   
</svg>
`;

exports[`Specific Icon Components > should render 'MenuIcon' correctly 1`] = `
<svg
  class="svg-icon menu-icon"
  data-testid="icon-base"
  fill="none"
  stroke="currentColor"
  stroke-width="1"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M3.75 5.25h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5m-16.5 4.5h16.5"
    stroke-linecap="round"
    stroke-linejoin="round"
  />
   
</svg>
`;

exports[`Specific Icon Components > should render 'SearchIcon' correctly 1`] = `
<svg
  class="svg-icon search-icon"
  data-testid="icon-base"
  fill="none"
  stroke="currentColor"
  stroke-width="1"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
    stroke-linecap="round"
    stroke-linejoin="round"
  />
   
</svg>
`;
